discussion/kv_engine/182318/182318_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Add SingleSteppingVisitorAdapter for cross-bucket eviction

The planned approach for cross-bucket item eviction is to evict items
from VBuckets in a round-robin fashion.

This can be accomplished by having an instance of this adapter task
scheduled per bucket and by manually wake()-ing each bucket's task in
a round-robin fashion.

This adapter will allow us to evict items from a:1 (bucket:vb) callback
into some common synchronisation point, schedule b:1, callback again,
schedule a:2 and so on...

*Alternative approaches*

We could use a GlobalTask scheduled on some non-engine taskable
(NoBucketTaskable or some new cross-bucket paging taskable). If we were
to do that, we'd have to maintain the state of each bucket's
PagingVisitors (or create a new cross-bucket PagingVisitor) and would
have to ensure that we're not starving threads, handling engine
shutdown etc.

We could also just set the existing PagingVisitors running as we
currently do, for all buckets sharing quota, and stop when the
sum(mem_used) < sum(LWM). But that could mean unfair eviction in the
sense that large HTs with a similar number of evictable items at the
same MFU might be slower to evict from, thereby always penalising
small HTs.

Change-Id: Ic92099b27e1c00933d346f4a0688f7c5e8282133

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-11-04 13:14:14.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-04 13:53:54.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21695/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:35:5: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    MOCK_METHOD1(visitBucket, void(VBucket&));
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:35:18: error: unknown type name "visitBucket" [clang-diagnostic-error]
    MOCK_METHOD1(visitBucket, void(VBucket&));
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:45:37: error: use of undeclared identifier "StrictMock" [clang-diagnostic-error]
    auto visitor = std::make_unique<StrictMock<MockVisitor>>(
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:48:27: error: use of undeclared identifier "visitBucket" [clang-diagnostic-error]
    EXPECT_CALL(*visitor, visitBucket(HasVbid(Vbid(0)))).Times(1);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:49:27: error: use of undeclared identifier "visitBucket" [clang-diagnostic-error]
    EXPECT_CALL(*visitor, visitBucket(HasVbid(Vbid(1)))).Times(1);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:50:27: error: use of undeclared identifier "visitBucket" [clang-diagnostic-error]
    EXPECT_CALL(*visitor, visitBucket(HasVbid(Vbid(2)))).Times(1);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:68:37: error: use of undeclared identifier "StrictMock" [clang-diagnostic-error]
    auto visitor = std::make_unique<StrictMock<MockVisitor>>(
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:71:27: error: use of undeclared identifier "visitBucket" [clang-diagnostic-error]
    EXPECT_CALL(*visitor, visitBucket(HasVbid(Vbid(0)))).Times(1);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:72:27: error: use of undeclared identifier "visitBucket" [clang-diagnostic-error]
    EXPECT_CALL(*visitor, visitBucket(HasVbid(Vbid(1)))).Times(1);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:73:27: error: use of undeclared identifier "visitBucket" [clang-diagnostic-error]
    EXPECT_CALL(*visitor, visitBucket(HasVbid(Vbid(2)))).Times(1);
                          ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21695/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:35:5:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21695/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/442/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [159/160]: test bucket quota reduction...../kv_engine/engines/ep/tests/ep_testsuite.cc:8498 Test failed: `" (Expected `success", got `temporary failure" - We should be able to store an item as the BucketQuotaChangeTask should not enforce memory limits until memory usage is low enough.)
[2022-11-04T13:32:02.319Z] (1338 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/442/ )

Timeout of a CTest test [2022-11-04T13:33:21.430Z]   8/467 Test #278: ep-engine_ep_unit_tests.Nexus/NexusKVStoreTest ..........................................................} ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/442/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11421/ : FAILURE

Compile error at [2022-11-04T13:19:02.266Z] ../kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:35:18:
error: unknown type name "visitBucket"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11421/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20965/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42754/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50943/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23170/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11512/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23735/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24142/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32157/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24971/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
